@@ -23,7 +23,7 @@ defined('_TCMS_VALID') or die('Restricted access');
  *
  * This class is used for a basic public functions.
  *
- * @version 2.7.7
+ * @version 2.7.8
  * @author	Jonathan Naumann <jonathan@toenda.com>
  * @package toendaCMS
  * @subpackage tcms_kernel
@@ -1738,7 +1738,8 @@ class tcms_main {
 				//$text = str_replace('&cat=', '&category=', $text);
 				
 				// main replace
-				$text = str_replace('?', $this->globalFolder.'/index.php/', $text);
+				$text = str_replace('?', 'index.php/', $text);
+				//$text = str_replace('?', $this->globalFolder.'/index.php/', $text);
 				$text = str_replace('&amp;', '/', $text);
 				$text = str_replace('&', '/', $text);
 				
