@@ -8,7 +8,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3607</build>
+	<build>Build 3611</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>19.11.2007 - 22:30</release_date>
